# proxishare

./: README.md  dockerfile  index.html  package-lock.json  package.json  tauri_info.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: index.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crypto/: encryption.rs  mod.rs  security.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/discovery/: mdns.rs
src-tauri/src/sync/: manager.rs  mod.rs  watcher.rs
src-tauri/src/transfer/: mod.rs  protocol.rs  receiver.rs  sender.rs
src/components/: DeviceList.vue  FileTransfer.vue  NetworkDiagnostics.vue  PairingDialog.vue  SyncSettings.vue  TransferHistory.vue
src/composables/: useDevices.ts  useFileTransfer.ts  useSync.ts
