[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.10"
quinn = { version = "0.11", features = ["rustls", "ring", "runtime-tokio"] }
rustls = { version = "0.23", features = ["ring"] }
blake3 = "1.5"
bincode = "1.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
notify = "6.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
futures = "0.3"
parking_lot = "0.12"
fs2 = "0.4"
rcgen = "0.12"
if-addrs = "0.13"
hostname = "0.4.2"

